<resources>
    <string name="app_name">PES EC Mess TimeTable</string>
    <string name="pesu_ec_mess">PESU-EC MESS</string>
    <string name="sign_up">Sign Up?</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="usn">USN</string>
    <string name="email">Email</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="Notificationtitle">Todays Meal</string>
    <string name="Notificationforfavorite">"Favorite Food Day,Don't Miss!"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
